chore: initial Docker setup

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,12 @@
 APP_PORT=3000
 JWT_SECRET=secret
+NODE_CONTAINER_NAME=movie-api-node
+MONGO_CONTAINER_NAME=movie-api-mongo
+MONGO_EXPRESS_CONTAINER_NAME=movie-api-mongo-express
+ME_CONFIG_MONGODB_ADMINUSERNAME=movie-api
+ME_CONFIG_MONGODB_ADMINPASSWORD=movie-api
+ME_CONFIG_MONGODB_URL=mongodb://movie-api:movie-api@mongo:27017/
+MONGO_DB_URL=mongodb://mongo:27017/movie-api
+OMDB_API_KEY=
+INTERNAL_API_BASE_URL=http://localhost
+OMDB_API_BASE_URL=http://www.omdbapi.com/
