--- a/package.json
+++ b/package.json
@@ -21,14 +21,23 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/axios": "^0.1.0",
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/cqrs": "^9.0.0",
+    "@nestjs/microservices": "^9.0.1",
+    "@nestjs/mongoose": "^9.2.0",
     "@nestjs/platform-express": "^8.0.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/uuid": "^8.3.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.4.4",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
