chore: add docker compose for testing

--- a/.env.test
+++ b/.env.test
@@ -6,10 +6,10 @@ MONGO_EXPRESS_CONTAINER_NAME=movie-api-mongo-express
 ME_CONFIG_MONGODB_ADMINUSERNAME=admin
 ME_CONFIG_MONGODB_ADMINPASSWORD=admin
 ME_CONFIG_MONGODB_URL=mongodb://admin:admin@mongodb:27017
-MONGO_DB_URL=mongodb://movie-api:movie-api@mongodb:27017/movie-api
+MONGO_DB_URL=mongodb://movie-api:movie-api@mongo:27017/movie-api-test
 MONGO_INITDB_ROOT_USERNAME=admin
 MONGO_INITDB_ROOT_PASSWORD=admin
-MONGO_INITDB_DATABASE=movie-api
+MONGO_INITDB_DATABASE=movie-api-test
 OMDB_API_KEY=
 INTERNAL_API_BASE_URL=http://localhost
 OMDB_API_BASE_URL=http://www.omdbapi.com/
