ci: add tests to CI

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,8 +4,6 @@ on:
 jobs:
   build_and_run:
     runs-on: ubuntu-latest
-    outputs:
-      output1: ${{ steps.register_runner.outputs.runner_name }}
     steps: 
       - uses: actions/checkout@v2
       - name: Build the stack
@@ -13,9 +11,5 @@ jobs:
           cp .env.test .env
           docker-compose -f docker-compose.ci.yaml build --no-cache
           docker-compose -f docker-compose.ci.yaml up -d
-  tests:
-    runs-on: ${{ needs.build_and_run.outputs.output1 }}
-    needs: [ build_and_run ]
-    steps: 
-      - name: Run the tests
-        run: echo "Hello world"
+          docker-compose -f docker-compose.ci.yaml exec -T node npm install
+          docker-compose -f docker-compose.ci.yaml exec -T node npm run test
